fix: corrigindo speakers on mobile

--- a/src/components/speakers-section/styles/Speakers.module.css
+++ b/src/components/speakers-section/styles/Speakers.module.css
@@ -42,6 +42,7 @@
   padding-top: 38px;
   margin-right: 1rem;
   cursor: pointer;
+  height: 450px;
 }
 
 .card_content {
